--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,16 @@ header {
   background-image: url(../images/avatar.jpg);
   background-size: 80px;
   background-repeat: no-repeat;
-  margin-left: 10px;
   width: 20%;
+  padding-top: 9vh;
  }
 
 a {
   color: white;
+}
+
+body {
+  background-color: #767985;
 }
 
 br { 
@@ -32,12 +36,13 @@ br {
   display: flex;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 35px;
+  color: #92CCCD;
   line-height: 1.5;
   width: 30%;
   align-items: center;
-  justify-content: right;
+  justify-content: center;
   padding-right: 10px;
-  background-color: #92CCCD;
+  padding-top: 15px;
 }
 
 header nav {
@@ -46,23 +51,15 @@ header nav {
   margin-right: 20px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   width: 60%;
-  font-size: 20px;
+  font-size: 32px;
   justify-content: center;
   align-items: center;
   /* positions links and sets the font and font size */
 }
 
-.coolSubtitle {
-
-  color: #92CCCD;
-  position: absolute;
-  left: 800px;
-  top: 220px;
+nav a:hover {
   background-color: #92CCCD;
-  color: #31343D;
-  font-size: 30px;
-  padding-left: 5px;
-  padding-right: 5px;
+  color: white;
 }
 
 nav ul li {
@@ -86,8 +83,11 @@ body {
   line-height: 1.5;
 }
 
-h1,
-h2,
+
+h2 {
+  color: #92CCCD;
+  padding-left: 20px;
+}
 h3,
 h4,
 h5,
@@ -95,11 +95,17 @@ h6 {
   margin: 0;
 }
 
+p {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 /* Grid Area */
 
 #categoryGrid {
   margin: 5px;
   display: grid;
+  background-color: #31343D;
   grid-template-columns: 1fr 1fr ;
   grid-template-rows: 300px 300px 300px;
   grid-template-areas: 
@@ -133,6 +139,16 @@ h6 {
   background-image: url(../images/02-run-buddy.jpg);
 }
 
+#test{
+  position: relative;
+}
+
+#test a{
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 .categoryGridArea {
   background-position: center;
   background-size: cover;
@@ -141,6 +157,20 @@ h6 {
   cursor: pointer;
   display: grid;
   align-content: end;
+}
+
+.heading {
+  background-color: rgba(0,0,0,0.7);
+  padding: 15px;
+  color: white;
+  font-size: 18px;
+}
+
+.page-section-contact {
+  display: flex;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  justify-content: center;
+  align-items: center;
 }
 
 /* for mobile phones */
@@ -172,12 +202,17 @@ h6 {
     .myName {
       display: flex;
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      font-size: 14px;
+      font-size: 20px;
       align-items: center;
       justify-content: center;
-      background-color: #92CCCD;
-    }
+      }
     br { 
       display:block; 
+    }
+
+    .contactMobile {
+      display: flex;
+      font-size: 10px;
+
     }
 }
